revert to jdk 11 to solve chinese encoding problem in console